# yew-countdown-solver

./: .gitignore  AGENTS.md  BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  staticwebapp.config.json
.cargo/: config.toml
.claude/: settings.json
.claude/plans/: playwright-getting-started.md  refactored-questing-glade.md  tailwind-automation-plan.md  temporal-wiggling-diffie.md  ticklish-twirling-pnueli.md
.github/workflows/: main.yml
.opencode/plans/: compete-mode-countdown-timer.md
benches/: solver_benchmark.rs
deploy/: credential.json  main.bicep
src/: app.rs  components.rs  game.rs  main.rs  solver.rs
src/components/: game_board.rs  game_provider.rs  manual_entry.rs
src/game/: board.rs  game.rs  model.rs
src/solver/: game_solver.rs  iterative_deepening.rs  solver.rs  traits.rs
styles/: output.css
tests/e2e/: .env.example  .gitignore  conftest.py  pyproject.toml  pytest.ini
tests/e2e/pages/: __init__.py  page_objects.py
tests/e2e/tests/: __init__.py  test_compete.py  test_custom_split.py  test_game_flow.py  test_manual_entry.py  test_solver.py
