[package]
name = "yew-countdown-solver"
version = "0.1.0"
edition = "2021"
description = "Yew project that solves countdown numbers game"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.22", features=["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
chrono = "0.4.43"
rand = "0.9.2"
