[package]
name = "yew-countdown-solver"
version = "0.1.0"
edition = "2021"
description = "Yew project that solves countdown numbers game"
readme = "README.md"
repository = "https://github.com/newmancodes/yew-countdown-solver"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.22", features=["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
thiserror = "2.0.17"
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "Storage"] }
wasm-bindgen-futures = "0.4.56"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
stats_alloc = "0.1.10"

[[bench]]
name = "solver_benchmark"
harness = false
